# gachibass.com

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml
docker/caddy/conf/: Caddyfile
docker/icecast/: Dockerfile  entrypoint.sh  icecast.xml.template
docker/liquidsoap/: Dockerfile  entrypoint.sh  radio.liq.template
streamer/: Dockerfile  config.local.yml  config.yml  main.py  pyproject.toml
streamer/src/gachibass/: __init__.py  __main__.py  bot.py  common.py  settings.py  stream.py
streamer/src/gachibass/api/: __init__.py
streamer/src/gachibass/bot/: __init__.py  bot.py  handlers.py
streamer/src/gachibass/playlist/: __init__.py
streamer/src/gachibass/streaming/: __init__.py  manager.py  stream.py
web/: Makefile  package.json  pnpm-lock.yaml  tsconfig.json
web/src/: main.ts
